--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,171 @@
+/* background all pages */
 body {
-    background-image: url("https://i.imgur.com/AWh9xnV.png");
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/grey_wash_wall.png");
     background-repeat: repeat;
     
 }
+/* responsive resize */
+@media screen and (max-width: 1060px) {
+    #primary { width:67%; }
+    #secondary { width:30%; margin-left:3%; }
+}
+/* responsive resize */
+@media screen and (max-width: 768px) {
+    #primary {width: 100%; font-size: 100%; }
+    #secondary {width: 100%; margin: 0; }
+}
 
-div {
+/* menu name on top left */
+#title {
+    text-align: left;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    position: absolute;
+    top: -5px;
+    background:  #2d73b6;
+    padding: 10px 10px 10px 10px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 30px;
+    color: #ffffff;
+}
 
+/* top navigation menu */
+#Topnav {
+    text-align: right;
+    overflow: hidden;
+    background-color: #ffffff;
+    padding: 30px;
+    width: 960px;
+   
+
+}
+/* menu navigation buttons */
+button {
+    border: none;
+    background-color: transparent;
+    color: black;
+    padding: 5px 10px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 20px;
+  }
+
+/* page titles */
+#subtitle {
+    color: #2d73b6;
+    font-size: 35px;
+    font: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font: bold;
+
+}
+
+/* about me font and background */
+#aboutme {
+    background: #ffffff;
+    width: 960px;
+    height: 400px;
+    font-size: 25px;
+    padding: 50px;
+    font: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    
+}
+/* reszing of about me image */
+#profile_img {
+    margin-right: 50px;
+    margin-bottom: 50px;
+    float: left;
+
+    
+}
+
+/* portfolio font and background */
+#portfolio {
+    background: #ffffff;
+    width: 960px;
+    height: 500px;
+    font-size: 20px;
+    padding: 50px;
+    font: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+
+   
+
+
+}
+/* contact font and background */
+#Contact {
+    background: #ffffff;
+    width: 960px;
+    height: 550px;
+    font-size: 20px;
+    padding: 50px;
+    font: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+
+}
+/* portfolio list style */
+.list {
+    columns: 3;
+    max-width: 700px;
+    margin: 50px;
+    list-style-type: none;
+    line-height: 500%;
+    
+
+}
+/* portfolio rezise of pictures */
+.resize {
+    width: 150px;
+    height: 150px;
+}
+/* hover action */
+.resize:hover {
+    opacity: 0.3;
+    filter: alpha(opacity=30);
+}
+/* bottom navigation bar styling */
+.navbarbottom {
+    background-color: darkgray;
+    overflow: hidden;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    border-top: solid;
+    border-color: #2d73b6;
+
+    }
+
+    /* bottom navigation bar text */
+.bottomtext {
+    color: lightgray;
+    font-size: 15px;
+    
+}
+/* form style and text */
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+/* form submit button style and text */
+input[type=submit] {
+    background-color: #2d73b6;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+/* form hover for submit button */
+input[type=submit]:hover {
+    background-color: lightblue;
+}
+/* form style */
+.container {
+    border-radius: 5px;
+    background-color: darkgray;
+    padding: 20px;
 }
